--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <title>Portfolio</title>
 
-    <link rel="stylesheet" href="../css/style.css"> <!-- Linkando CSS com o HTML -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Linkando CSS com o HTML -->
 
-    <link rel="shortcut icon" href="../favicons/bpv.png" type="image/x-icon" /> <!-- Mudando FAVICON da página -->
+    <link rel="shortcut icon" href="favicons/bpv.png" type="image/x-icon" /> <!-- Mudando FAVICON da página -->
 
 </head>
 
@@ -38,8 +38,8 @@
 
             <h1>Guilherme's Portfolio</h1>
 
-            <a href="./index.html" target="_blank">Projects</a>
-            <a href="./about.html" target="_blank">About</a>
+            <a href="index.html" target="_blank">Projects</a>
+            <a href="html/about.html" target="_blank">About</a>
             <!--
                 <a href="upcoming.html" target="_blank">Upcoming</a>
             -->
@@ -79,7 +79,7 @@
 
                     <picture id="foto"> <!-- Div para colocar imagem dentro do artigo -->
 
-                        <img src="../images/Monster.png" id="photo" alt="" srcset="" width="740vw" height="455vh">
+                        <img src="images/Monster.png" id="photo" alt="" srcset="" width="740vw" height="455vh">
 
                     </picture>
                 
@@ -95,7 +95,7 @@
 
 </div>    
 
-<script src="../js/music2.js"></script> <!-- Linkando o script em JS com o HTML-->
+<script src="js/music2.js"></script> <!-- Linkando o script em JS com o HTML-->
 
 </body>
 
