--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,7 @@
     <title>Portfolio</title>
 
     <link rel="stylesheet" href="../css/style.css"> <!-- Linkando CSS com o HTML -->
-    <link rel="shortcut icon" href="favicons/bpv.png" type="image/x-icon" /> <!-- Mudando FAVICON da página -->
+    <link rel="shortcut icon" href="../favicons/bpv.png" type="image/x-icon" /> <!-- Mudando FAVICON da página -->
 
 </head>
 
@@ -39,7 +39,7 @@
 
             <h1>Guilherme's Portfolio</h1>
 
-            <a href="index.html" target="_blank">Projects</a>
+            <a href="../index.html" target="_blank">Projects</a>
             <a href="html/about.html" target="_blank">About</a>
             <!-- <a href="upcoming.html" target="_blank">Upcoming</a> -->
         
@@ -89,7 +89,7 @@
 
 </div>    
 
-<script src="js/music.js"></script> <!-- Linkando o script em JS com o HTML-->
+<script src="../js/music.js"></script> <!-- Linkando o script em JS com o HTML-->
 
 </body>
 
