--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <h1>Guilherme's Portfolio</h1>
 
-            <a href="index.html" target="_blank">Projects</a>
+            <a href="./index.html" target="_blank">Projects</a>
             <a href="html/about.html" target="_blank">About</a>
             <!--
                 <a href="upcoming.html" target="_blank">Upcoming</a>
@@ -95,7 +95,7 @@
 
 </div>    
 
-<script src="js/music2.js"></script> <!-- Linkando o script em JS com o HTML-->
+<script src="../js/music2.js"></script> <!-- Linkando o script em JS com o HTML-->
 
 </body>
 
