--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 </div>    
 
-<script src="../js/music2.js"></script> <!-- Linkando o script em JS com o HTML-->
+<script src="js/music2.js"></script> <!-- Linkando o script em JS com o HTML-->
 
 </body>
 
