--- a/html/about.html
+++ b/html/about.html
@@ -15,21 +15,6 @@
 
 <body>
 
-    <!-- Tags para adicionar música na página -->
-   <!--  <audio autoplay loop>
-        <source src="../sounds/OP5.mp3" type="audio/mp3">
-    </audio> -->
-
-
-
-    <!-- PALETA DE CORES 
-        Azul Principal: #32C2C2
-        Azul Claro 1: #67E0E0
-        Azul Claro 2: #9CF7F7
-        Azul Escuro 1: #118A8A
-        Azul Escuro 2: #035E5E
-    -->
-
 <!-- DIV CONTAINER para organizar os elementos através de GRID -->
 <div class="container">
 
@@ -40,8 +25,8 @@
             <h1>Guilherme's Portfolio</h1>
 
             <a href="../index.html" target="_blank">Projects</a>
-            <a href="html/about.html" target="_blank">About</a>
-            <!-- <a href="upcoming.html" target="_blank">Upcoming</a> -->
+            <a href="../html/about.html" target="_blank">About</a>
+            <a href="../html/upcoming.html" target="_blank">Upcoming</a>
         
         </nav>
 
@@ -89,6 +74,7 @@
 
 </div>    
 
+<audio src="../sounds/OP5.mp3" id="OP5" loop="loop"></audio>
 <script src="../js/music.js"></script> <!-- Linkando o script em JS com o HTML-->
 
 </body>
